[BUGFIX] Adjusted table width to avoid overlapping grids

--- a/Resources/Public/Backend/Css/Skin/t3skin_override.css
+++ b/Resources/Public/Backend/Css/Skin/t3skin_override.css
@@ -28,7 +28,7 @@
 }
 
 .t3-page-columns .t3-page-columns {
-	width: 100%;
+	min-width: 100%;
 }
 
 .t3-page-ce:hover .t3-page-ce-header {
